Initialize Swiper Slider Integration for Product Page and Clean Up Code

--- a/TennisStoreClient/Pages/CartPages/MyCartPage.razor.css
+++ b/TennisStoreClient/Pages/CartPages/MyCartPage.razor.css
@@ -144,6 +144,10 @@
     transition: all 0.3s ease;
 }
 
+    .delete-button i {
+        margin-right: 3px;
+    }
+
     .delete-button:hover {
         background: #d32f2f;
     }
