Product page slider working

--- a/TennisStoreClient/Pages/CartPages/MyCartPage.razor
+++ b/TennisStoreClient/Pages/CartPages/MyCartPage.razor
@@ -35,7 +35,7 @@
                 @foreach (var item in MyCartOrders)
                 {
                     <div class="cart-item">
-                        <img class="item-image" src="@item.Image" alt="@item.Name">
+                        <img class="item-image" src="https://i.imgur.com/@item.Image" alt="@item.Name">
                         <div class="item-details">
                             <h3>@item.Name</h3>
                             <p>מחיר יחידה: ₪@item.Price</p>
