--- a/TennisStoreClient/Pages/BrandPages/BrandPage.razor
+++ b/TennisStoreClient/Pages/BrandPages/BrandPage.razor
@@ -2,12 +2,30 @@
 @using System.Text.RegularExpressions
 
 <div class="container">
-    <img style="margin:auto;" src="@("/images/" + CurrentBrand?.LogoPath)" alt="@CurrentBrand?.HebName" width="100" height="100">
-    <h1 style="margin:auto;">Hi</h1>
-    @CurrentBrand?.HebName
+    <img class="brand-logo" src="@("/images/" + CurrentBrand?.LogoPath)" alt="@CurrentBrand?.HebName">
+    <img class="banner-img" src="https://i.imgur.com/@CurrentBrand?.BrandPageBannerImage" alt="">
+    @if (CurrentBrand?.Subcategories != null)
+    {
+        foreach (var subcategory in CurrentBrand.Subcategories)
+        {
+            if (!string.IsNullOrEmpty(subcategory.BrandIconPath))
+            {
+                <div class="subcategory-icon">
+                    <img src="/Images/Icons/@subcategory.BrandIconPath" style="
+                            width: 150px;
+                            background-color: #f9f9f9;
+                            padding-bottom: 10px;
+                            border: 1px solid #f5f5f5;
+                            margin-bottom: 10px;
+                            border-radius: 5px;" alt="@subcategory.Name">
+                    <span>@subcategory.Name</span>
+                </div>
+            }
+        }
+    }
+    @* <h1 class="brand-title">Hi</h1>
+    <span>@CurrentBrand?.HebName</span> *@
 </div>
-
-
 
 @code {
     #region Parameters
@@ -31,11 +49,4 @@
     }
 
     #endregion
-
-    #region Methods
-
-
-
-    #endregion
 }
-
