--- a/TennisStoreClient/Components/Home/Testimonials/Testimonials.razor
+++ b/TennisStoreClient/Components/Home/Testimonials/Testimonials.razor
@@ -2,7 +2,7 @@
     <h2 class="title">אודות</h2>
 
     <div class="testimonial-card">
-        <img src="/images/testimonial-1.jpg" alt="alan doe" class="testimonial-banner" width="80" height="80">
+        @* <img src="/images/testimonial-1.jpg" alt="alan doe" class="testimonial-banner" width="80" height="80"> *@
         <p class="testimonial-name">אנטולי שלמייב</p>
         <p class="testimonial-title">מנכ"ל ומייסד</p>
         <i  alt="quotation" class="quotation-img fa-solid fa-quote-left" width="26"></i>
