--- a/TennisStoreClient/Pages/Home.razor
+++ b/TennisStoreClient/Pages/Home.razor
@@ -6,7 +6,7 @@
 <BrandSlider />
 <ProductContainer />
 <TestimonialsBox />
-<Blog />
+@* <Blog /> *@
 
 @* <FrontPageComponent></FrontPageComponent>
 <div class="col-md-12 mt-5">
