--- a/TennisStoreClient/Pages/BrandPages/BrandPage.razor
+++ b/TennisStoreClient/Pages/BrandPages/BrandPage.razor
@@ -6,22 +6,20 @@
     <img class="banner-img" src="https://i.imgur.com/@CurrentBrand?.BrandPageBannerImage" alt="">
     @if (CurrentBrand?.Subcategories != null)
     {
-        foreach (var subcategory in CurrentBrand.Subcategories)
-        {
-            if (!string.IsNullOrEmpty(subcategory.BrandIconPath))
+        <div class="subcategory-wrapper">
+            @foreach (var subcategory in CurrentBrand.Subcategories)
             {
-                <div class="subcategory-icon">
-                    <img src="/Images/Icons/@subcategory.BrandIconPath" style="
-                            width: 150px;
-                            background-color: #f9f9f9;
-                            padding-bottom: 10px;
-                            border: 1px solid #f5f5f5;
-                            margin-bottom: 10px;
-                            border-radius: 5px;" alt="@subcategory.Name">
-                    <span>@subcategory.Name</span>
-                </div>
+                if (!string.IsNullOrEmpty(subcategory.BrandIconPath))
+                {
+                    <div class="subcategory-icon">
+                        <div class="subcategory-content">
+                            <img class="subcategory-img" src="/Images/Icons/@subcategory.BrandIconPath" alt="@subcategory.Name">
+                            <span class="subcategory-name">@subcategory.CategoryName</span>
+                        </div>
+                    </div>
+                }
             }
-        }
+        </div>
     }
     @* <h1 class="brand-title">Hi</h1>
     <span>@CurrentBrand?.HebName</span> *@
